@@ -1,6 +1,7 @@
 intended v0.1.20
 + ui/Component API cleanup
 + implement ui/Component display, hide and show
++ fix ui/Component addClass/hasClass/removeClass/toggleClass
 + better xhr error checking and xhr object cleanup
 + implement invoke
 + rename pick to filter. deprecate pick, but keep it around for now
